Improving the styles.

--- a/src/index.html
+++ b/src/index.html
@@ -32,11 +32,11 @@
     </div>
 
     <div>
-      <img class="absolute left-[-50%] top-32 z-10" src="../src/assets/images/pattern-rings.svg" alt="Pattern Rings">
+      <img class="absolute left-[-50%] top-32 z-10 md:left-[-30%] md:top-20 lg:top-36 lg:left-[-10%]" src="../src/assets/images/pattern-rings.svg" alt="Pattern Rings">
     </div>
 
     <div>
-      <img class="absolute bottom-[40%] right-[-20%] overflow-x-hidden md:right-0 md:bottom-0 lg:right-[50%] lg:bottom-28" src="../src/assets/images/pattern-circle.svg" alt="Pattern Circle">
+      <img class="absolute bottom-[40%] right-[-20%] overflow-x-hidden md:right-0 md:bottom-0 lg:right-[46%] lg:bottom-28" src="../src/assets/images/pattern-circle.svg" alt="Pattern Circle">
     </div>
 
     <div class="mt-[300px] md:mt-0 md:flex md:flex-row-reverse">
@@ -45,7 +45,7 @@
         <img class="hidden md:hidden xl:block mt-[-80px] w-[60%]" src="../src/assets/images/image-profile-desktop.webp" alt="Adam Keyes">
       </div>
       <div class="md:relative md:z-40 md:w-[65%] md:ml-auto md:mr-0">
-        <h2 class="px-4 pt-10 pb-6 font-bold text-center text-[40px] leading-[40px] tracking-[-1.14px] md:text-7xl lg:text-[88px] md:text-left lg:mr-[-80px] lg:px-0">Nice to meet you! I'm <span class="border-b-4 border-neon_green">Adam Keyes</span>.</h2>
+        <h2 class="px-4 pt-10 pb-6 font-bold text-center text-[40px] leading-[40px] tracking-[-1.14px] md:text-7xl lg:text-[88px] md:text-left lg:mr-[-80px] lg:px-0 md:pt-[90px] lg:pt-[127px]">Nice to meet you! I'm <span class="border-b-4 border-neon_green">Adam Keyes</span>.</h2>
         <p class="px-4 pb-6 text-center leading-[26px] text-grey md:text-left md:mt-[43px] md:mb-[66px] lg:px-0 lg:w-[60%]">
           Based in the UK, I'm a front-end developer passionate about
           building accessible web apps that users love.
@@ -87,7 +87,7 @@
         </div>
       </section>
       <div class="relative">
-        <img class="absolute right-[-50%] top-[-50px] z-10 md:top-[-80px]" src="../src/assets/images/pattern-rings.svg" alt="Pattern Rings">
+        <img class="absolute right-[-50%] top-[-50px] z-10 md:top-[-80px] lg:right-[-30%] lg:top-[-120px]" src="../src/assets/images/pattern-rings.svg" alt="Pattern Rings">
       </div>
       <section class="mt-14">
         <div class="flex justify-between pb-10">
@@ -212,7 +212,7 @@
     </section>
 
     <div class="relative">
-      <img class="absolute left-[-50%] top-[-210px] z-10 md:top-[-150px]" src="../src/assets/images/pattern-rings.svg" alt="Pattern Rings">
+      <img class="absolute left-[-50%] top-[-210px] z-10 md:top-[-150px] lg:left-[-30%]" src="../src/assets/images/pattern-rings.svg" alt="Pattern Rings">
     </div>
     
     <div class="mb-[60px] flex flex-col justify-center items-center m-auto mt-10 border-t-2 px-4 md:flex-row lg:pt-5">
