Working on styles

--- a/src/index.html
+++ b/src/index.html
@@ -60,8 +60,8 @@
 
   <main class="mt-[90px] mx-4 md:mt-10 lg:px-[165px]">
     <div class="border-t-2">
-      <section class="text-center md:grid md:grid-cols-2 lg:grid-cols-3">
-        <div class="pt-10">
+      <section class="text-center md:grid md:grid-cols-2 lg:grid-cols-3 pt-10 md:pt-[52px] lg:pt-[72px]">
+        <div>
           <h2 class="font-bold text-[32px] leading-[40px] tracking-[-1px]">HTML</h2>
           <p class="leading-[26px]">4 Years Experience</p>
         </div>
@@ -176,7 +176,7 @@
               <p>CSS</p>
               <p>JavaScript</p>
             </div>
-            <div class="pt-5 pb-20 flex justify-start gap-[30px]">
+            <div class="pt-5 pb-20 flex justify-start gap-[30px] md:pb-[100px] lg:pb-[139px]">
               <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">View Project</button>
               <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">View Code</button>
             </div>
