Add overlay effect to project thumbnails

--- a/src/index.html
+++ b/src/index.html
@@ -86,9 +86,11 @@
           <p class="leading-[26px] pb-10 border-b-2 md:border-b-transparent">3 Years Experience</p>
         </div>
       </section>
+
       <div class="relative">
         <img class="absolute right-[-50%] top-[-50px] z-10 md:top-[-80px] lg:right-[-30%] lg:top-[-120px]" src="../src/assets/images/pattern-rings.svg" alt="Pattern Rings">
       </div>
+
       <section class="mt-14">
         <div class="flex justify-between pb-10">
           <div>
@@ -99,9 +101,16 @@
           </div>
         </div>
         <div class="md:grid md:grid-cols-2 md:gap-[22px]">
-          <article>
-            <img class="lg:hidden" src="../src/assets/images/thumbnail-project-1-small.webp" alt="Thumbnail Project">
-            <img class="hidden lg:block" src="../src/assets/images/thumbnail-project-1-large.webp" alt="Thumbnail Project">
+          <article class="md:col-span-1">
+            <div class="image">
+              <div class="relative">
+                <a href="#">
+                  <img class="lg:hidden" src="../src/assets/images/thumbnail-project-1-small.webp" alt="Thumbnail Project">
+                  <img class="hidden lg:block" src="../src/assets/images/thumbnail-project-1-large.webp" alt="Thumbnail Project">
+                  <div class="overlay hidden"></div>
+                </a>
+              </div>
+            </div>
             <h3 class="uppercase font-bold text-2xl leading-[32px] mt-5">Design portfolio</h3>
             <div class="flex gap-[18px] text-lg leading-[28px] uppercase">
               <p>HTML</p>
@@ -112,9 +121,16 @@
               <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">View Code</button>
             </div>
           </article>
-          <article>
-            <img class="lg:hidden" src="../src/assets/images/thumbnail-project-2-small.webp" alt="Thumbnail Project">
-            <img class="hidden lg:block" src="../src/assets/images/thumbnail-project-2-large.webp" alt="Thumbnail Project">
+          <article class="md:col-span-1">
+            <div class="image">
+              <div class="relative">
+                <a href="#">
+                  <img class="lg:hidden" src="../src/assets/images/thumbnail-project-2-small.webp" alt="Thumbnail Project">
+                  <img class="hidden lg:block" src="../src/assets/images/thumbnail-project-2-large.webp" alt="Thumbnail Project">
+                  <div class="overlay hidden"></div>
+                </a>
+              </div>
+            </div>
             <h3 class="uppercase font-bold text-2xl leading-[32px] mt-5">E-learning landing page</h3>
             <div class="flex gap-[18px] text-lg leading-[28px] uppercase">
               <p>HTML</p>
@@ -125,9 +141,16 @@
               <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">View Code</button>
             </div>
           </article>
-          <article>
-            <img class="lg:hidden" src="../src/assets/images/thumbnail-project-3-small.webp" alt="Thumbnail Project">
-            <img class="hidden lg:block" src="../src/assets/images/thumbnail-project-3-large.webp" alt="Thumbnail Project">
+          <article class="md:col-span-1">
+            <div class="image">
+              <div class="relative">
+                <a href="#">
+                  <img class="lg:hidden" src="../src/assets/images/thumbnail-project-3-small.webp" alt="Thumbnail Project">
+                  <img class="hidden lg:block" src="../src/assets/images/thumbnail-project-3-large.webp" alt="Thumbnail Project">
+                  <div class="overlay hidden"></div>
+                </a>
+              </div>
+            </div>
             <h3 class="uppercase font-bold text-2xl leading-[32px] mt-5">Todo web app</h3>
             <div class="flex gap-[18px] text-lg leading-[28px] uppercase">
               <p>HTML</p>
@@ -139,9 +162,16 @@
               <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">View Code</button>
             </div>
           </article>
-          <article>
-            <img class="lg:hidden" src="../src/assets/images/thumbnail-project-4-small.webp" alt="Thumbnail Project">
-            <img class="hidden lg:block" src="../src/assets/images/thumbnail-project-4-large.webp" alt="Thumbnail Project">
+          <article class="md:col-span-1">
+            <div class="image">
+              <div class="relative">
+                <a href="#">
+                  <img class="lg:hidden" src="../src/assets/images/thumbnail-project-4-small.webp" alt="Thumbnail Project">
+                  <img class="hidden lg:block" src="../src/assets/images/thumbnail-project-4-large.webp" alt="Thumbnail Project">
+                  <div class="overlay hidden"></div>
+                </a>
+              </div>
+            </div>
             <h3 class="uppercase font-bold text-2xl leading-[32px] mt-5">Entertainment web app</h3>
             <div class="flex gap-[18px] text-lg leading-[28px] uppercase">
               <p>HTML</p>
@@ -153,9 +183,16 @@
               <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">View Code</button>
             </div>
           </article>
-          <article>
-            <img class="lg:hidden" src="../src/assets/images/thumbnail-project-5-small.webp" alt="Thumbnail Project">
-            <img class="hidden lg:block" src="../src/assets/images/thumbnail-project-5-large.webp" alt="Thumbnail Project">
+          <article class="md:col-span-1">
+            <div class="image">
+              <div class="relative">
+                <a href="#">
+                  <img class="lg:hidden" src="../src/assets/images/thumbnail-project-5-small.webp" alt="Thumbnail Project">
+                  <img class="hidden lg:block" src="../src/assets/images/thumbnail-project-5-large.webp" alt="Thumbnail Project">
+                  <div class="overlay hidden"></div>
+                </a>
+              </div>
+            </div>
             <h3 class="uppercase font-bold text-2xl leading-[32px] mt-5">Memory Game</h3>
             <div class="flex gap-[18px] text-lg leading-[28px] uppercase">
               <p>HTML</p>
@@ -167,9 +204,16 @@
               <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">View Code</button>
             </div>
           </article>
-          <article>
-            <img class="lg:hidden" src="../src/assets/images/thumbnail-project-6-small.webp" alt="Thumbnail Project">
-            <img class="hidden lg:block" src="../src/assets/images/thumbnail-project-6-large.webp" alt="Thumbnail Project">
+          <article class="md:col-span-1">
+            <div class="image">
+              <div class="relative">
+                <a href="#">
+                  <img class="lg:hidden" src="../src/assets/images/thumbnail-project-6-small.webp" alt="Thumbnail Project">
+                  <img class="hidden lg:block" src="../src/assets/images/thumbnail-project-6-large.webp" alt="Thumbnail Project">
+                  <div class="overlay hidden"></div>
+                </a>
+              </div>
+            </div>
             <h3 class="uppercase font-bold text-2xl leading-[32px] mt-5">Art gallery showcase</h3>
             <div class="flex gap-[18px] text-lg leading-[28px] uppercase">
               <p>HTML</p>
