--- a/src/index.html
+++ b/src/index.html
@@ -107,7 +107,12 @@
                 <a href="#">
                   <img class="lg:hidden" src="../src/assets/images/thumbnail-project-1-small.webp" alt="Thumbnail Project">
                   <img class="hidden lg:block" src="../src/assets/images/thumbnail-project-1-large.webp" alt="Thumbnail Project">
-                  <div class="overlay hidden"></div>
+                  <div class="overlay hidden flex-col justify-center items-center">
+                    <div class="flex flex-col justify-center items-center">
+                      <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5 mb-12 block">View Project</button>
+                      <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5 block">View Code</button>
+                    </div>
+                  </div>
                 </a>
               </div>
             </div>
@@ -116,7 +121,7 @@
               <p>HTML</p>
               <p>CSS</p>
             </div>
-            <div class="pt-5 pb-10 flex justify-start gap-[30px]">
+            <div class="pt-5 pb-10 flex justify-start gap-[30px] lg:hidden">
               <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">View Project</button>
               <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">View Code</button>
             </div>
@@ -127,7 +132,12 @@
                 <a href="#">
                   <img class="lg:hidden" src="../src/assets/images/thumbnail-project-2-small.webp" alt="Thumbnail Project">
                   <img class="hidden lg:block" src="../src/assets/images/thumbnail-project-2-large.webp" alt="Thumbnail Project">
-                  <div class="overlay hidden"></div>
+                  <div class="overlay hidden flex-col justify-center items-center">
+                    <div class="flex flex-col justify-center items-center">
+                      <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5 mb-12 block">View Project</button>
+                      <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5 block">View Code</button>
+                    </div>
+                  </div>
                 </a>
               </div>
             </div>
@@ -136,7 +146,7 @@
               <p>HTML</p>
               <p>CSS</p>
             </div>
-            <div class="pt-5 pb-10 flex justify-start gap-[30px]">
+            <div class="pt-5 pb-10 flex justify-start gap-[30px] lg:hidden">
               <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">View Project</button>
               <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">View Code</button>
             </div>
@@ -147,7 +157,12 @@
                 <a href="#">
                   <img class="lg:hidden" src="../src/assets/images/thumbnail-project-3-small.webp" alt="Thumbnail Project">
                   <img class="hidden lg:block" src="../src/assets/images/thumbnail-project-3-large.webp" alt="Thumbnail Project">
-                  <div class="overlay hidden"></div>
+                  <div class="overlay hidden flex-col justify-center items-center">
+                    <div class="flex flex-col justify-center items-center">
+                      <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5 mb-12 block">View Project</button>
+                      <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5 block">View Code</button>
+                    </div>
+                  </div>
                 </a>
               </div>
             </div>
@@ -157,7 +172,7 @@
               <p>CSS</p>
               <p>JavaScript</p>
             </div>
-            <div class="pt-5 pb-10 flex justify-start gap-[30px]">
+            <div class="pt-5 pb-10 flex justify-start gap-[30px] lg:hidden">
               <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">View Project</button>
               <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">View Code</button>
             </div>
@@ -168,7 +183,12 @@
                 <a href="#">
                   <img class="lg:hidden" src="../src/assets/images/thumbnail-project-4-small.webp" alt="Thumbnail Project">
                   <img class="hidden lg:block" src="../src/assets/images/thumbnail-project-4-large.webp" alt="Thumbnail Project">
-                  <div class="overlay hidden"></div>
+                  <div class="overlay hidden flex-col justify-center items-center">
+                    <div class="flex flex-col justify-center items-center">
+                      <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5 mb-12 block">View Project</button>
+                      <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5 block">View Code</button>
+                    </div>
+                  </div>
                 </a>
               </div>
             </div>
@@ -178,7 +198,7 @@
               <p>CSS</p>
               <p>JavaScript</p>
             </div>
-            <div class="pt-5 pb-10 flex justify-start gap-[30px]">
+            <div class="pt-5 pb-10 flex justify-start gap-[30px] lg:hidden">
               <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">View Project</button>
               <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">View Code</button>
             </div>
@@ -189,7 +209,12 @@
                 <a href="#">
                   <img class="lg:hidden" src="../src/assets/images/thumbnail-project-5-small.webp" alt="Thumbnail Project">
                   <img class="hidden lg:block" src="../src/assets/images/thumbnail-project-5-large.webp" alt="Thumbnail Project">
-                  <div class="overlay hidden"></div>
+                  <div class="overlay hidden flex-col justify-center items-center">
+                    <div class="flex flex-col justify-center items-center">
+                      <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5 mb-12 block">View Project</button>
+                      <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5 block">View Code</button>
+                    </div>
+                  </div>
                 </a>
               </div>
             </div>
@@ -199,7 +224,7 @@
               <p>CSS</p>
               <p>JavaScript</p>
             </div>
-            <div class="pt-5 pb-10 flex justify-start gap-[30px]">
+            <div class="pt-5 pb-10 flex justify-start gap-[30px] lg:hidden">
               <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">View Project</button>
               <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">View Code</button>
             </div>
@@ -210,7 +235,12 @@
                 <a href="#">
                   <img class="lg:hidden" src="../src/assets/images/thumbnail-project-6-small.webp" alt="Thumbnail Project">
                   <img class="hidden lg:block" src="../src/assets/images/thumbnail-project-6-large.webp" alt="Thumbnail Project">
-                  <div class="overlay hidden"></div>
+                  <div class="overlay hidden flex-col justify-center items-center">
+                    <div class="flex flex-col justify-center items-center">
+                      <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5 mb-12 block">View Project</button>
+                      <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5 block">View Code</button>
+                    </div>
+                  </div>
                 </a>
               </div>
             </div>
@@ -221,8 +251,8 @@
               <p>JavaScript</p>
             </div>
             <div class="pt-5 pb-20 flex justify-start gap-[30px] md:pb-[100px] lg:pb-[139px]">
-              <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">View Project</button>
-              <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">View Code</button>
+              <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5 lg:hidden">View Project</button>
+              <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5 lg:hidden">View Code</button>
             </div>
           </article>
         </div>
