Improved the styles

--- a/src/index.html
+++ b/src/index.html
@@ -36,13 +36,14 @@
     </div>
 
     <div>
-      <img class="absolute bottom-[40%] right-[-20%] overflow-x-hidden md:right-0 md:bottom-0 lg:right-[46%] lg:bottom-28" src="../src/assets/images/pattern-circle.svg" alt="Pattern Circle">
+      <img class="absolute bottom-[40%] right-[-20%] overflow-x-hidden md:hidden" src="../src/assets/images/pattern-circle.svg" alt="Pattern Circle">
     </div>
 
     <div class="mt-[300px] md:mt-0 md:flex md:flex-row-reverse">
-      <div class="hidden md:block md:mr-[-190px] lg:mr-[135px]">
+      <div class="hidden md:block md:mr-[-190px] lg:mr-[135px] relative">
         <img class="hidden md:block xl:hidden mt-[-80px] w-[60%]" src="../src/assets/images/image-profile-tablet.webp" alt="Adam Keyes">
         <img class="hidden md:hidden xl:block mt-[-80px] w-[60%]" src="../src/assets/images/image-profile-desktop.webp" alt="Adam Keyes">
+        <img class="absolute md:bottom-0 md:left-[50%] lg:bottom-[10%] lg:left-[-60px]" src="../src/assets/images/pattern-circle.svg" alt="Pattern Circle">
       </div>
       <div class="md:relative md:z-40 md:w-[65%] md:ml-auto md:mr-0">
         <h2 class="px-4 pt-10 pb-6 font-bold text-center text-[40px] leading-[40px] tracking-[-1.14px] md:text-7xl lg:text-[88px] md:text-left lg:mr-[-80px] lg:px-0 md:pt-[90px] lg:pt-[127px]">Nice to meet you! I'm <span class="border-b-4 border-neon_green">Adam Keyes</span>.</h2>
