Adjusting the styles

--- a/src/index.html
+++ b/src/index.html
@@ -59,32 +59,32 @@
 
   </header>
 
-  <main class="mt-[90px] mx-4 md:mt-10 lg:px-[165px]">
+  <main class="mt-[90px] mx-4 md:mt-10 lg:px-[165px] lg:mt-[105px]">
     <div class="border-t-2">
-      <section class="text-center md:grid md:grid-cols-2 lg:grid-cols-3 pt-10 md:pt-[52px] lg:pt-[72px]">
+      <section class="text-center md:grid md:grid-cols-2 lg:grid-cols-3 pt-10 md:pt-[52px] lg:pt-[72px] md:gap-y-[52px] lg:gap-y-[58px]">
         <div>
-          <h2 class="font-bold text-[32px] leading-[40px] tracking-[-1px]">HTML</h2>
-          <p class="leading-[26px]">4 Years Experience</p>
+          <h2 class="font-bold text-[32px] leading-[40px] tracking-[-1px] md:text-5xl">HTML</h2>
+          <p class="leading-[26px] md:text-lg">4 Years Experience</p>
         </div>
         <div class="pt-6">
-          <h2 class="font-bold text-[32px] leading-[40px] tracking-[-1px]">CSS</h2>
-          <p class="leading-[26px]">4 Years Experience</p>
+          <h2 class="font-bold text-[32px] leading-[40px] tracking-[-1px] md:text-5xl">CSS</h2>
+          <p class="leading-[26px] md:text-lg">4 Years Experience</p>
         </div>
         <div class="pt-6">
-          <h2 class="font-bold text-[32px] leading-[40px] tracking-[-1px]">JavaScript</h2>
-          <p class="leading-[26px]">4 Years Experience</p>
+          <h2 class="font-bold text-[32px] leading-[40px] tracking-[-1px] md:text-5xl">JavaScript</h2>
+          <p class="leading-[26px] md:text-lg">4 Years Experience</p>
         </div>
         <div class="pt-6">
-          <h2 class="font-bold text-[32px] leading-[40px] tracking-[-1px]">Accessibility</h2>
-          <p class="leading-[26px]">4 Years Experience</p>
+          <h2 class="font-bold text-[32px] leading-[40px] tracking-[-1px] md:text-5xl">Accessibility</h2>
+          <p class="leading-[26px] md:text-lg">4 Years Experience</p>
         </div>
         <div class="pt-6">
-          <h2 class="font-bold text-[32px] leading-[40px] tracking-[-1px]">React</h2>
-          <p class="leading-[26px]">3 Years Experience</p>
+          <h2 class="font-bold text-[32px] leading-[40px] tracking-[-1px] md:text-5xl">React</h2>
+          <p class="leading-[26px] md:text-lg">3 Years Experience</p>
         </div>
         <div class="pt-6">
-          <h2 class="font-bold text-[32px] leading-[40px] tracking-[-1px]">Sass</h2>
-          <p class="leading-[26px] pb-10 border-b-2 md:border-b-transparent">3 Years Experience</p>
+          <h2 class="font-bold text-[32px] leading-[40px] tracking-[-1px] md:text-5xl">Sass</h2>
+          <p class="leading-[26px] pb-10 border-b-2 md:border-b-transparent md:text-lg">3 Years Experience</p>
         </div>
       </section>
 
@@ -95,7 +95,7 @@
       <section class="mt-14">
         <div class="flex justify-between pb-10">
           <div>
-            <h2 class="font-bold text-center text-[40px] leading-[40px] tracking-[-1.14px]">Projects</h2>
+            <h2 class="font-bold text-center text-[40px] leading-[40px] tracking-[-1.14px] md:text-7xl lg:text-[88px]">Projects</h2>
           </div>
           <div class="flex justify-center">
             <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">Contact me</button>
