--- a/src/index.html
+++ b/src/index.html
@@ -93,7 +93,7 @@
       </div>
 
       <section class="mt-14">
-        <div class="flex justify-between pb-10">
+        <div class="flex justify-between pb-10 md:pb-[60px] lg:pb-20">
           <div>
             <h2 class="font-bold text-center text-[40px] leading-[40px] tracking-[-1.14px] md:text-7xl lg:text-[88px]">Projects</h2>
           </div>
@@ -264,7 +264,7 @@
   <footer class="bg-dark_gray lg:px-[165px] lg:mx-0 lg:pt-[84px]">
     <section class="md:mx-[160px] lg:flex lg:justify-between lg:mx-0 lg:gap-[180px]">
       <div class="lg:w-[45%]">
-        <h2 class="font-bold text-center text-[40px] leading-[40px] tracking-[-1.14px] pt-[60px] lg:text-left lg:pt-0 md:text-[72px] lg:text-7xl">Contact</h2>
+        <h2 class="font-bold text-center text-[40px] leading-[40px] tracking-[-1.14px] pt-[60px] lg:text-left lg:pt-0 md:text-7xl lg:text-[88px]">Contact</h2>
         <p class="px-4 pb-[50px] pt-5 text-center leading-[26px] text-grey lg:text-left md:text-lg lg:pt-9">
           I would love to hear about your project and how I could help. Please
           fill in the form, and I’ll get back to you as soon as possible.
