--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@
 
   <main class="mt-[90px] mx-4 md:mt-10 lg:px-[165px] lg:mt-[105px]">
     <div class="border-t-2">
-      <section class="text-center md:grid md:grid-cols-2 lg:grid-cols-3 pt-10 md:pt-[52px] lg:pt-[72px] md:gap-y-[52px] lg:gap-y-[58px]">
+      <section class="text-center md:grid md:grid-cols-2 lg:grid-cols-3 pt-10 md:pt-[52px] lg:pt-[72px] md:gap-y-[52px] lg:gap-y-[58px] md:text-justify">
         <div>
           <h2 class="font-bold text-[32px] leading-[40px] tracking-[-1px] md:text-5xl">HTML</h2>
           <p class="leading-[26px] md:text-lg">4 Years Experience</p>
