--- a/src/index.html
+++ b/src/index.html
@@ -92,7 +92,7 @@
         <img class="absolute right-[-50%] top-[-50px] z-10 md:top-[-80px] lg:right-[-30%] lg:top-[-120px]" src="../src/assets/images/pattern-rings.svg" alt="Pattern Rings">
       </div>
 
-      <section class="mt-14">
+      <section class="mt-14 lg:mt-[140px]">
         <div class="flex justify-between pb-10 md:pb-[60px] lg:pb-20">
           <div>
             <h2 class="font-bold text-center text-[40px] leading-[40px] tracking-[-1.14px] md:text-7xl lg:text-[88px]">Projects</h2>
