Update the styles

--- a/src/index.html
+++ b/src/index.html
@@ -101,7 +101,7 @@
             <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">Contact me</button>
           </div>
         </div>
-        <div class="md:grid md:grid-cols-2 md:gap-[22px]">
+        <div class="md:grid md:grid-cols-2 md:gap-[22px] md:gap-y-[60px] lg:gap-y-[70px]">
           <article class="md:col-span-1">
             <div class="image">
               <div class="relative">
