--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
     <div class="flex flex-col justify-center items-center m-auto w-[47%] relative md:w-full">
       <div class="md:flex md:justify-between md:w-screen md:m-auto">
         <h1 class="font-bold text-2xl px-3 py-5">adamkeyes</h1>
-        <div class="flex justify-between gap-6 items-center w-full px-2.5 md:justify-end md:mr-11 lg:mr-[399px]">
+        <div class="flex justify-between gap-6 items-center w-full px-2.5 md:justify-end md:mr-11 lg:mr-[425px] z-50">
           <a href="#" class="cursor-pointer"><img src="../src/assets/images/icon-github.svg" alt="Icon GitHub"></a>
           <a href="#" class="cursor-pointer"><img src="../src/assets/images/icon-frontend-mentor.svg" alt="Icon Frontend-Mentor"></a>
           <a href="#" class="cursor-pointer"><img src="../src/assets/images/icon-linkedin.svg" alt="Icon LinkedIn"></a>
