--- a/src/index.html
+++ b/src/index.html
@@ -20,10 +20,10 @@
       <div class="md:flex md:justify-between md:w-screen md:m-auto">
         <h1 class="font-bold text-2xl px-3 py-5">adamkeyes</h1>
         <div class="flex justify-between gap-6 items-center w-full px-2.5 md:justify-end md:mr-11 lg:mr-[425px] z-50">
-          <a href="#" class="cursor-pointer"><img src="../src/assets/images/icon-github.svg" alt="Icon GitHub"></a>
-          <a href="#" class="cursor-pointer"><img src="../src/assets/images/icon-frontend-mentor.svg" alt="Icon Frontend-Mentor"></a>
-          <a href="#" class="cursor-pointer"><img src="../src/assets/images/icon-linkedin.svg" alt="Icon LinkedIn"></a>
-          <a href="#" class="cursor-pointer"><img src="../src/assets/images/icon-twitter.svg" alt="Icon Twitter"></a>
+          <a href="#" class="cursor-pointer linkNav"><img src="../src/assets/images/icon-github.svg" alt="Icon GitHub"></a>
+          <a href="#" class="cursor-pointer linkNav"><img src="../src/assets/images/icon-frontend-mentor.svg" alt="Icon Frontend-Mentor"></a>
+          <a href="#" class="cursor-pointer linkNav"><img src="../src/assets/images/icon-linkedin.svg" alt="Icon LinkedIn"></a>
+          <a href="#" class="cursor-pointer linkNav"><img src="../src/assets/images/icon-twitter.svg" alt="Icon Twitter"></a>
         </div>
       </div>
       <div class="z-20">
@@ -293,10 +293,10 @@
     <div class="mb-[60px] flex flex-col justify-center items-center m-auto mt-10 border-t-2 px-4 md:flex-row lg:pt-5">
       <h1 class="font-bold text-2xl px-3 py-5">adamkeyes</h1>
       <div class="flex justify-between gap-6 items-center px-2.5 w-[47%] md:w-full md:justify-end">
-        <a href="#" class="cursor-pointer"><img src="../src/assets/images/icon-github.svg" alt="Icon GitHub"></a>
-        <a href="#" class="cursor-pointer"><img src="../src/assets/images/icon-frontend-mentor.svg" alt="Icon Frontend-Mentor"></a>
-        <a href="#" class="cursor-pointer"><img src="../src/assets/images/icon-linkedin.svg" alt="Icon LinkedIn"></a>
-        <a href="#" class="cursor-pointer"><img src="../src/assets/images/icon-twitter.svg" alt="Icon Twitter"></a>
+        <a href="#" class="cursor-pointer linkNav"><img src="../src/assets/images/icon-github.svg" alt="Icon GitHub"></a>
+        <a href="#" class="cursor-pointer linkNav"><img src="../src/assets/images/icon-frontend-mentor.svg" alt="Icon Frontend-Mentor"></a>
+        <a href="#" class="cursor-pointer linkNav"><img src="../src/assets/images/icon-linkedin.svg" alt="Icon LinkedIn"></a>
+        <a href="#" class="cursor-pointer linkNav"><img src="../src/assets/images/icon-twitter.svg" alt="Icon Twitter"></a>
       </div>
     </div>
 
