--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,9 @@
   
   <title>Frontend Mentor | Single-page developer portfolio</title>
 </head>
-<body class="font-Space_Grotesk bg-dark_black text-pure_white flex flex-col justify-center items-center m-auto">
+<body class="font-Space_Grotesk bg-dark_black text-pure_white flex flex-col justify-center items-center m-auto overflow-x-hidden">
 
-  <header class="flex flex-col justify-center items-center m-auto relative md:px-[30px] lg:px-[165px]">
+  <header class="flex flex-col justify-center items-center m-auto relative md:px-[30px] lg:px-[165px] overflow-x-hidden">
     <div class="flex flex-col justify-center items-center m-auto w-[47%] relative md:w-full">
       <div class="md:flex md:justify-between md:w-screen md:m-auto">
         <h1 class="font-bold text-2xl px-3 py-5">adamkeyes</h1>
@@ -31,16 +31,16 @@
       </div>
     </div>
 
-    <div>
+    <div class="overflow-x-hidden">
       <img class="absolute left-[-50%] top-32 z-10 md:left-[-30%] md:top-20 lg:top-36 lg:left-[-10%]" src="../src/assets/images/pattern-rings.svg" alt="Pattern Rings">
     </div>
 
-    <div>
+    <div class="overflow-x-hidden">
       <img class="absolute bottom-[40%] right-[-20%] overflow-x-hidden md:hidden" src="../src/assets/images/pattern-circle.svg" alt="Pattern Circle">
     </div>
 
     <div class="mt-[300px] md:mt-0 md:flex md:flex-row-reverse">
-      <div class="hidden md:block md:mr-[-190px] lg:mr-[135px] relative">
+      <div class="hidden md:block md:mr-[-190px] lg:mr-[135px] relative overflow-x-hidden">
         <img class="hidden md:block xl:hidden mt-[-80px] w-[60%]" src="../src/assets/images/image-profile-tablet.webp" alt="Adam Keyes">
         <img class="hidden md:hidden xl:block mt-[-80px] w-[60%]" src="../src/assets/images/image-profile-desktop.webp" alt="Adam Keyes">
         <img class="absolute md:bottom-0 md:left-[50%] lg:bottom-[10%] lg:left-[-60px]" src="../src/assets/images/pattern-circle.svg" alt="Pattern Circle">
@@ -88,7 +88,7 @@
         </div>
       </section>
 
-      <div class="relative">
+      <div class="relative overflow-x-hidden">
         <img class="absolute right-[-50%] top-[-50px] z-10 md:top-[-80px] lg:right-[-30%] lg:top-[-120px]" src="../src/assets/images/pattern-rings.svg" alt="Pattern Rings">
       </div>
 
@@ -286,7 +286,7 @@
       </div>
     </section>
 
-    <div class="relative">
+    <div class="relative overflow-x-hidden">
       <img class="absolute left-[-50%] top-[-210px] z-10 md:top-[-150px] lg:left-[-30%]" src="../src/assets/images/pattern-rings.svg" alt="Pattern Rings">
     </div>
     
